@@ -12,6 +12,7 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	genswf9 : fixed verify error with Null<Class> (was using dynamic access)
 	small patch for jsfl support
 	added __charCodeAt for very fast string operations on Flash9
+	bugfix with inlined local variables
 
 2008-04-05: 1.19
 	fixed flash9 Array.toString
